--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>test git</h1>
     <p>permet de tester ce bon vieux git.</p>
+    <script src="js/script.js"></script>
 </body>
 </html>
