+1 line index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>test git</h1>
     <p>permet de tester ce bon vieux git.</p>
+    <p>une ligne en plus à tester pour le collabo</p>
     <script src="js/script.js"></script>
 </body>
 </html>
