--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <h1>test git</h1>
-    <p>permet de tester ce bon vieux git.</p>
-    <p>une ligne en plus à tester pour le collabo</p>
-    <script src="js/script.js"></script>
-</body>
+    <html lang="FR">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title> Ayaya </title>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+        <main|>
+            <header>
+                <h1>tTest Git</h1>
+            </header>
+            <section>
+                <p>Permet de tester ce bon vieux git.</p>
+                <p>Une ligne en plus à tester pour le collabo</p>
+                <p> ............................................ </p>
+            </section>
+        </main>
+        <script src="js/script.js"></script>
+    </body>
 </html>
