--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>test git</h1>
     <p>permet de tester ce bon vieux git.</p>
     <p>une ligne en plus à tester pour le collabo</p>
+    <h2>seconde édition ::</h2>
     <script src="js/script.js"></script>
 </body>
 </html>
