bidon mod for conflitcs

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <main>
             <header>
                 <h1>Test C++</h1>
-                <h2>or test-git</h2>
+                <h2>or test-git modifieh</h2>
             </header>
             <section>
                 <h2> Yeet </h2>
@@ -24,6 +24,10 @@
                 <h2>seconde édition ::</h2>
                 <p>permet de tester ce bon vieux git.</p>
                 <p>une ligne en plus à tester pour le collabo</p>
+            </section>
+            <section class="section-bootcrap">
+                <h2>troisième édition ::</h2>
+                <p>c'est très beau.</p>
             </section>
         </main>
         <script src="js/script.js"></script>
