--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <main>
             <header>
                 <h1>Test C++</h1>
-                <h2> Pokemon </h2>
+                <h2>or !</h2>
             </header>
             <section>
                 <h2> Yeet </h2>
@@ -20,7 +20,7 @@
                 <p> ............................................ </p>
             </section>
             <!-- add this thing -->
-            <section>
+            <section class="section-bootcrap">
                 <h2>seconde édition ::</h2>
                 <p>permet de tester ce bon vieux git.</p>
                 <p>une ligne en plus à tester pour le collabo</p>
